# vagrant-openwrt-cmake

./: .gitignore  Makefile  README.md  Vagrantfile  bootstrap.patch  bootstrap.sh  cmlibuv-CMakeLists.txt.patch  json_writer.cpp.patch
amd64/: GNU-C.cmake.patch  Makefile  Vagrantfile  bootstrap  bootstrap.sh  cmCTest.cxx.patch  cmCTestScriptHandler.cxx.patch  cmQtAutoGenInitializer.cxx.patch  json_reader.cpp.patch
amd64/test/: CMakeLists.txt  Vagrantfile
i386/: GNU-CXX.cmake.patch  GNU.cmake.patch  Makefile  SystemInformation.cxx.patch  Vagrantfile  bootstrap  bootstrap.sh  cmProcess.cxx.patch  cmQtAutoGenerator.cxx.patch
i386/test/: .gitignore  CMakeLists.txt  Vagrantfile
test/: Vagrantfile
